--- a/hata/apartments.html
+++ b/hata/apartments.html
@@ -69,7 +69,7 @@
             </div>
         </div>
     </header>
-    <main class="main">
+    <main id="main" class="main">
         <div class="filter js-filter">
             <div class="filter__body js-filter-body">
                 <div class="container">
@@ -188,7 +188,7 @@
                         </div>
                     </div>
                     <div class="filter__row filter__row_fe">
-                        <button type="button" class="button button_white button_aslink tab__liftup js-filter-trigger">Еще фильтры</button>
+                        <button type="button" class="button button_white button_aslink tab__liftup js-filter-more">Еще фильтры</button>
                         <button type="submit" class="button button_green button_search tab__liftup">Найти</button>
                     </div>
                 </div>
@@ -269,15 +269,31 @@
                         </ul>
                     </div>
                     <div class="col-container col-container_four">
-                        <a href="./item.html" class="top__item">
+                        <a href="./item.html" class="top__item js-swiper">
                             <div class="top__head">
                                 <span class="top__head-price">883 USD/м<sup>2</sup></span>
                                 <span class="top__head-year">2014 г. п.</span>
                                 <span class="top__head-action">АКЦИЯ</span>
-                                <picture class="top__img">
-                                    <source srcset="./img/apart_1.jpg" type="image/jpg">
-                                    <img src="./img/apart_1.jpg" alt="Квартира">
-                                </picture>
+                                <div class="swiper-wrapper">
+                                    <div class="swiper-slide">
+                                        <picture class="top__img">
+                                            <source srcset="./img/apart_1.jpg" type="image/jpg">
+                                            <img src="./img/apart_1.jpg" alt="Квартира">
+                                        </picture>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <picture class="top__img">
+                                            <source srcset="./img/apart_1.jpg" type="image/jpg">
+                                            <img src="./img/apart_1.jpg" alt="Квартира">
+                                        </picture>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <picture class="top__img">
+                                            <source srcset="./img/apart_1.jpg" type="image/jpg">
+                                            <img src="./img/apart_1.jpg" alt="Квартира">
+                                        </picture>
+                                    </div>
+                                </div>
                             </div>
                             <div class="top__body">
                                 <h3 class="top__title">Квартира 10км от Минска</h3>
@@ -295,15 +311,31 @@
                                 </label>
                             </div>
                         </a>
-                        <a href="./item.html" class="top__item">
+                        <a href="./item.html" class="top__item js-swiper">
                             <div class="top__head">
                                 <span class="top__head-price">883 USD/м<sup>2</sup></span>
                                 <span class="top__head-year">2014 г. п.</span>
                                 <span class="top__head-action">АКЦИЯ</span>
-                                <picture class="top__img">
-                                    <source srcset="./img/apart_1.jpg" type="image/jpg">
-                                    <img src="./img/apart_1.jpg" alt="Квартира">
-                                </picture>
+                                <div class="swiper-wrapper">
+                                    <div class="swiper-slide">
+                                        <picture class="top__img">
+                                            <source srcset="./img/apart_1.jpg" type="image/jpg">
+                                            <img src="./img/apart_1.jpg" alt="Квартира">
+                                        </picture>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <picture class="top__img">
+                                            <source srcset="./img/apart_1.jpg" type="image/jpg">
+                                            <img src="./img/apart_1.jpg" alt="Квартира">
+                                        </picture>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <picture class="top__img">
+                                            <source srcset="./img/apart_1.jpg" type="image/jpg">
+                                            <img src="./img/apart_1.jpg" alt="Квартира">
+                                        </picture>
+                                    </div>
+                                </div>
                             </div>
                             <div class="top__body">
                                 <h3 class="top__title">Квартира 10км от Минска</h3>
@@ -321,15 +353,31 @@
                                 </label>
                             </div>
                         </a>
-                        <a href="./item.html" class="top__item">
+                        <a href="./item.html" class="top__item js-swiper">
                             <div class="top__head">
                                 <span class="top__head-price">883 USD/м<sup>2</sup></span>
                                 <span class="top__head-year">2014 г. п.</span>
                                 <span class="top__head-action">АКЦИЯ</span>
-                                <picture class="top__img">
-                                    <source srcset="./img/apart_1.jpg" type="image/jpg">
-                                    <img src="./img/apart_1.jpg" alt="Квартира">
-                                </picture>
+                                <div class="swiper-wrapper">
+                                    <div class="swiper-slide">
+                                        <picture class="top__img">
+                                            <source srcset="./img/apart_1.jpg" type="image/jpg">
+                                            <img src="./img/apart_1.jpg" alt="Квартира">
+                                        </picture>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <picture class="top__img">
+                                            <source srcset="./img/apart_1.jpg" type="image/jpg">
+                                            <img src="./img/apart_1.jpg" alt="Квартира">
+                                        </picture>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <picture class="top__img">
+                                            <source srcset="./img/apart_1.jpg" type="image/jpg">
+                                            <img src="./img/apart_1.jpg" alt="Квартира">
+                                        </picture>
+                                    </div>
+                                </div>
                             </div>
                             <div class="top__body">
                                 <h3 class="top__title">Квартира 10км от Минска</h3>
@@ -347,15 +395,31 @@
                                 </label>
                             </div>
                         </a>
-                        <a href="./item.html" class="top__item">
+                        <a href="./item.html" class="top__item js-swiper">
                             <div class="top__head">
                                 <span class="top__head-price">883 USD/м<sup>2</sup></span>
                                 <span class="top__head-year">2014 г. п.</span>
                                 <span class="top__head-action">АКЦИЯ</span>
-                                <picture class="top__img">
-                                    <source srcset="./img/apart_1.jpg" type="image/jpg">
-                                    <img src="./img/apart_1.jpg" alt="Квартира">
-                                </picture>
+                                <div class="swiper-wrapper">
+                                    <div class="swiper-slide">
+                                        <picture class="top__img">
+                                            <source srcset="./img/apart_1.jpg" type="image/jpg">
+                                            <img src="./img/apart_1.jpg" alt="Квартира">
+                                        </picture>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <picture class="top__img">
+                                            <source srcset="./img/apart_1.jpg" type="image/jpg">
+                                            <img src="./img/apart_1.jpg" alt="Квартира">
+                                        </picture>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <picture class="top__img">
+                                            <source srcset="./img/apart_1.jpg" type="image/jpg">
+                                            <img src="./img/apart_1.jpg" alt="Квартира">
+                                        </picture>
+                                    </div>
+                                </div>
                             </div>
                             <div class="top__body">
                                 <h3 class="top__title">Квартира 10км от Минска</h3>
@@ -380,9 +444,22 @@
                 <div class="container">
                     <div class="selling__wrap">
                         <div class="selling__main">
-                            <a href="./item.html" class="apartment apartment_green">
+                            <a href="./item.html" class="apartment apartment_green js-swiper">
                                 <div class="apartment__slider">
-                                    <img src="./img/apart_1.jpg" alt="Квартира" class="apartment__img">
+                                    <div class="swiper-wrapper">
+                                        <div class="swiper-slide">
+                                            <picture class="apartment__img">
+                                                <source srcset="./img/apart_1.jpg" type="image/jpg">
+                                                <img src="./img/apart_1.jpg" alt="Квартира">
+                                            </picture>
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <picture class="apartment__img">
+                                                <source srcset="./img/apart_1.jpg" type="image/jpg">
+                                                <img src="./img/apart_1.jpg" alt="Квартира">
+                                            </picture>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="apartment__main">
                                     <div class="apartment__body">
@@ -434,9 +511,22 @@
                                     </div>
                                 </div>
                             </a>
-                            <a href="./item.html" class="apartment apartment_green">
+                            <a href="./item.html" class="apartment apartment_green js-swiper">
                                 <div class="apartment__slider">
-                                    <img src="./img/apart_1.jpg" alt="Квартира" class="apartment__img">
+                                    <div class="swiper-wrapper">
+                                        <div class="swiper-slide">
+                                            <picture class="apartment__img">
+                                                <source srcset="./img/apart_1.jpg" type="image/jpg">
+                                                <img src="./img/apart_1.jpg" alt="Квартира">
+                                            </picture>
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <picture class="apartment__img">
+                                                <source srcset="./img/apart_1.jpg" type="image/jpg">
+                                                <img src="./img/apart_1.jpg" alt="Квартира">
+                                            </picture>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="apartment__main">
                                     <div class="apartment__body">
@@ -488,9 +578,22 @@
                                     </div>
                                 </div>
                             </a>
-                            <a href="./item.html" class="apartment">
+                            <a href="./item.html" class="apartment js-swiper">
                                 <div class="apartment__slider">
-                                    <img src="./img/apart_1.jpg" alt="Квартира" class="apartment__img">
+                                    <div class="swiper-wrapper">
+                                        <div class="swiper-slide">
+                                            <picture class="apartment__img">
+                                                <source srcset="./img/apart_1.jpg" type="image/jpg">
+                                                <img src="./img/apart_1.jpg" alt="Квартира">
+                                            </picture>
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <picture class="apartment__img">
+                                                <source srcset="./img/apart_1.jpg" type="image/jpg">
+                                                <img src="./img/apart_1.jpg" alt="Квартира">
+                                            </picture>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="apartment__main">
                                     <div class="apartment__body">
@@ -542,9 +645,22 @@
                                     </div>
                                 </div>
                             </a>
-                            <a href="./item.html" class="apartment">
+                            <a href="./item.html" class="apartment js-swiper">
                                 <div class="apartment__slider">
-                                    <img src="./img/apart_1.jpg" alt="Квартира" class="apartment__img">
+                                    <div class="swiper-wrapper">
+                                        <div class="swiper-slide">
+                                            <picture class="apartment__img">
+                                                <source srcset="./img/apart_1.jpg" type="image/jpg">
+                                                <img src="./img/apart_1.jpg" alt="Квартира">
+                                            </picture>
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <picture class="apartment__img">
+                                                <source srcset="./img/apart_1.jpg" type="image/jpg">
+                                                <img src="./img/apart_1.jpg" alt="Квартира">
+                                            </picture>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="apartment__main">
                                     <div class="apartment__body">
@@ -596,9 +712,22 @@
                                     </div>
                                 </div>
                             </a>
-                            <a href="./item.html" class="apartment">
+                            <a href="./item.html" class="apartment js-swiper">
                                 <div class="apartment__slider">
-                                    <img src="./img/apart_1.jpg" alt="Квартира" class="apartment__img">
+                                    <div class="swiper-wrapper">
+                                        <div class="swiper-slide">
+                                            <picture class="apartment__img">
+                                                <source srcset="./img/apart_1.jpg" type="image/jpg">
+                                                <img src="./img/apart_1.jpg" alt="Квартира">
+                                            </picture>
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <picture class="apartment__img">
+                                                <source srcset="./img/apart_1.jpg" type="image/jpg">
+                                                <img src="./img/apart_1.jpg" alt="Квартира">
+                                            </picture>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="apartment__main">
                                     <div class="apartment__body">
@@ -732,5 +861,7 @@
             </div>
         </div>
     </footer>
+    <a href="#main" class="scroll js-scroll js-scroll-link"></a>
+    <script src="./js/swiper-bundle.min.js"></script>
 </body>
 </html>
