--- a/hata/apartments.html
+++ b/hata/apartments.html
@@ -69,7 +69,7 @@
             </div>
         </div>
     </header>
-    <main id="main" class="main">
+    <main id="main" class="main" data-page="apartments">
         <div class="filter js-filter">
             <div class="filter__body js-filter-body">
                 <div class="container">
