--- a/hata/item.html
+++ b/hata/item.html
@@ -69,7 +69,7 @@
             </div>
         </div>
     </header>
-    <main id="main" class="main">
+    <main id="main" class="main" data-page="item">
         <div class="filter">
             <div class="filter__body">
                 <div class="container">
