Adaptive of first page done

--- a/hata/index.html
+++ b/hata/index.html
@@ -807,8 +807,8 @@
                         </picture>
                         <div class="article__body">
                             <h3 class="article__title">Бизнес-центры</h3>
-                            <p class="article__text js-excerpt" data-length="370">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, rem ipsum dolor sit amet consectetur adipisicing elit. Dolorrem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, minus et? Quisquam modi, quo duem, minus et? Quisquam modi, quo durem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, minus et? Quisquam modi, quo duminus et? Quisquam modi, quo ducimus velit architecto cupiditate dolores facilis?
-                                                     Amet aperiam officiis libero pariatur numquam animi eos ab, mollitia id ducimus? Nobis illum perspiciatis odio officiis soluta voluptates magnam.</p>
+                            <p class="article__text js-excerpt" data-length="370">Lorem ipsum dolor sit amet consectetur adipisicinpsum dolor sit amet consectetur adipisicing elit. Dolorrem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, minus et? Quisquam modi, quo duem, minus et? Quisquam modi, qucimus velit architecto cupiditate dolores facilis?
+                                                     Amet aperiam officiis libero pariatur numquam animi eos ab, soluta voluptates magnam.</p>
                         </div>
                         <span class="article__views">120</span>
                     </a>
@@ -894,7 +894,7 @@
                 </div>
                 <div class="footer__col">
                     <span class="footer__big-text">
-                        Реклама на сайте: <a href="tel:+375445504545">+375 (44) 550 4545</a><a href="mailto:555@hata.by">555@hata.by</a>
+                        Реклама на сайте:<br> <a href="tel:+375445504545">+375 (44) 550 4545</a><br><a href="mailto:555@hata.by">555@hata.by</a>
                     </span>
                     <div class="footer__services">
                         <a href="#" class="footer__text">Цены на услуги</a>
