--- a/hata/index.html
+++ b/hata/index.html
@@ -70,6 +70,40 @@
             </div>
         </div>
     </header>
+    <div class="menu js-menu">
+        <nav class="nav">
+            <ul class="nav__list">
+                <li class="nav__item"><a href="./apartments.html" class="nav__link text_ttu">Продажа</a></li>
+                <li class="nav__item"><a href="./apartments.html" class="nav__link text_ttu">Новостройки</a></li>
+                <li class="nav__item"><a href="./apartments.html" class="nav__link text_ttu">Аренда</a></li>
+                <li class="nav__item"><a href="./apartments.html" class="nav__link text_ttu">Земля</a></li>
+                <li class="nav__item"><a href="./apartments.html" class="nav__link text_ttu">Офисы</a></li>
+            </ul>
+        </nav>
+        <div class="header__content">
+            <div class="dropdown js-dropdown">
+                <div class="tab__select-wrap">
+                    <select class="tab__select">
+                        <option value="Минск">USD</option>
+                        <option value="Гомель">EUR</option>
+                        <option value="Брест">RUB</option>
+                    </select>
+                </div>
+            </div>
+            <div class="dropdown js-dropdown">
+                <div class="tab__select-wrap">
+                    <select class="tab__select">
+                        <option value="Минск">Минск</option>
+                        <option value="Гомель">Гомель</option>
+                        <option value="Брест">Брест</option>
+                        <option value="Гомель">Гомель</option>
+                    </select>
+                </div>
+            </div>
+            <button class="button button_green button_add">Добавить объявление</button>
+            <button class="button button_white button_login">Войти</button>
+        </div>
+    </div>
     <main id="main" class="main" data-page="index">
         <section class="hero">
             <picture class="hero__bg js-hero-bg">
